universal css reverse to two days ago, becuse it's happening issue on mobile responsive

--- a/assets/css/universal.css
+++ b/assets/css/universal.css
@@ -1140,10 +1140,10 @@ table.wpt_product_table tr.wpt_selected_tr .wpt_quantity{
 
 /*Responsive Version is here*/
 @media only screen and (min-width: 768px) and (max-width: 991px){
-    /* table#wpt_table.mobile_responsive.wpt_product_table>tbody>tr>td,
+    table#wpt_table.mobile_responsive.wpt_product_table>tbody>tr>td,
     table#wpt_table.mobile_responsive.wpt_product_table>thead>tr>th{
         display: none;
-    } */
+    }
     table#wpt_table.mobile_responsive.wpt_product_table .wpt_product_title,
     table#wpt_table.mobile_responsive.wpt_product_table .wpt_Message,
     table#wpt_table.mobile_responsive.wpt_product_table .wpt_action,
@@ -1154,24 +1154,9 @@ table.wpt_product_table tr.wpt_selected_tr .wpt_quantity{
     td.wpt_product_title {
         position: relative;
     }
-    /* fatima  */
-    table.custom_table tbody .wpt_product_title {
-        max-width: 450px;
-    } 
-    .custom_table .wpt_row td img {
-        margin: 0 !important; 
-        padding:10px 0;
-    }
-
     .wpt_for_thumbs_desc.wpt_thumbnails>img {
         display: inline;
-    } 
-    /* fatima  */
-    tbody tr.visible_row.wpt_row .col_inside_tag.action {
-        align-items: flex-start;
     }
-
-
     /*customize*/
     .wpt_for_product_action{
         margin-bottom: 5px;
@@ -1217,8 +1202,7 @@ table.wpt_product_table tr.wpt_selected_tr .wpt_quantity{
     .all_check_header_footer.all_check_header {
         padding-right: 0;
     }
-    /* table#wpt_table.mobile_responsive.wpt_product_table>thead{display: none;} */
-
+    table#wpt_table.mobile_responsive.wpt_product_table>thead{display: none;}
     table#wpt_table.mobile_responsive.wpt_product_table .wpt_action {
         padding-top: 34px !important;
         padding-bottom: 10px !important;
@@ -1243,8 +1227,7 @@ table.wpt_product_table tr.wpt_selected_tr .wpt_quantity{
     }
 }
 @media only screen and (max-width: 767px) {
-    /* table#wpt_table.mobile_responsive.wpt_product_table th{ display: none!important;}         */
-
+    table#wpt_table.mobile_responsive.wpt_product_table th{ display: none!important;}        
     /* Force table to not be like tables anymore */
     table#wpt_table.mobile_responsive.wpt_product_table, 
     table#wpt_table.mobile_responsive.wpt_product_table thead, 
@@ -1266,36 +1249,12 @@ table.wpt_product_table tr.wpt_selected_tr .wpt_quantity{
     td.wpt_Message>input.message {
         width: 100%;
     }
-    .custom_table .wpt_row td img {
-        margin: 0 !important; 
-        padding:10px 0;
-    } 
-    tbody tr.visible_row.wpt_row .col_inside_tag.action { 
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        align-content: space-around;
-    }
-    /* template-chose-area (fatima)  */
-    .template-chose-area form {
-        display: block;
-    }
-    .temp-chose-description {
-        padding-left: 0px;
-        margin-top: 14px;
-    }
-    .wpt_quantity {
-        display: none;
-    }
-    .wpt_action {
-        display: none;
-    }
+    
     /* Hide table headers (but not display: none;, for accessibility) */
-    /* table#wpt_table.mobile_responsive.wpt_product_table thead tr,
+    table#wpt_table.mobile_responsive.wpt_product_table thead tr,
     table#wpt_table.mobile_responsive.wpt_product_table td.wpt_total.total_general{ 
         display: none !important;
-    } */
+    }
     #wpt_table.no_responsive {
         overflow: auto;
         width: 100%;
